--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux": "^4.0.0",
     "store": "^2.0.12",
     "style-loader": "^0.23.0",
+    "uniqid": "^5.0.3",
     "webpack-stream": "^5.1.1"
   },
   "devDependencies": {
