--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "accounting": "^0.4.1",
     "babel": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
