--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.0",
     "gulp-nodemon": "^2.2.1",
+    "gulp-open": "^3.0.1",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "highcharts": "^6.1.4",
