--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^8.0.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "compression-webpack-plugin": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.10.0",
     "gulp-htmlmin": "^5.0.1",
