--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.1.3",
+    "compression": "^1.7.3",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "glamor": "^2.20.40",
