reduce request call, optimization

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "glamor": "^2.20.40",
+    "gulp-order": "^1.1.1",
     "highcharts": "^6.1.4",
     "html-loader": "^0.5.5",
     "jquery": "^3.3.1",
     "less": "^3.8.1",
     "lodash": "^4.17.10",
+    "merge-stream": "^1.0.1",
     "moments": "0.0.2",
     "path": "^0.12.7",
     "popper.js": "^1.14.4",
@@ -43,6 +45,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.10.0",
+    "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-less": "^4.0.1",
